--- a/assets/less/constructor.less
+++ b/assets/less/constructor.less
@@ -47,7 +47,8 @@
 		}
 	}
 	&__preview-slide {
-		background: #333333;
+		position: relative;
+		z-index: 2;
 		width: 100%;
 		height: 700px;
 		background-size: cover;
