--- a/assets/less/price-block.less
+++ b/assets/less/price-block.less
@@ -61,7 +61,7 @@
 		background: url('../img/ribbon-red.svg') no-repeat;
 		text-align: center;
 		.no-select();
-		z-index: 5;
+		z-index: 3;
 		@media @mobile-mq{
 			top: -1px;
 		}
