--- a/assets/less/textures.less
+++ b/assets/less/textures.less
@@ -215,7 +215,7 @@
 		.icon{
 			z-index: 3;
 			position: relative;
-			opacity: 0.6;
+			opacity: 0.9;
 		}
 		&:after {
 			content: '';
